phase2/test/test_12012222_1.out
Error type 15 at Line 8: redefine struct: Car
Error type 13 at Line 17: accessing with non-struct variable
Error type 5 at Line 18: unmatching type on both sides of assignment
Error type 7 at Line 20: binary operation on non-number variables
